# AffinityMCP

./: .gitignore  CURSOR_SETUP.md  Cargo.toml  QUICKSTART.md  README.md  SETUP_GUIDE.md  SPEC.md  TROUBLESHOOTING.md  package.json  run-affinity-mcp.js  run-affinity-mcp.sh
scripts/: postinstall.js  run.js
src/: main.rs  mcp.rs
src/tools/: affinity.rs  canva.rs  mod.rs
